<resources>
    <string name="app_name">Chat Station</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="username">Username</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="age">Age</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking Sign Up you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_email">Please enter your Registered Email below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="confirm_account">Confirm your registration</string>
    <string name="confirm_account_info">In order to complete your registration, please type the confirmation code from the email that we have sent to you.</string>
    <string name="confirm">CONFIRM</string>
    <string name="confirmationHint">Confirmation Code</string>
    <string name="confirm_account_resend_info">Have trouble finding the code? No worries! Click below to resend the confirmation code.</string>
    <string name="confirm_resend">Resend Confirmation Code</string>
    <string name="user_info">User\'s Information</string>
    <string name="user_info_hidden">Hidden</string>
</resources>